// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders a large varient 1`] = `
<h1
  className="DisplayText DisplayText--large"
  data-test-id="cf-ui-display-text"
>
  DisplayText
</h1>
`;

exports[`renders the component 1`] = `
<h1
  className="DisplayText DisplayText--default"
  data-test-id="cf-ui-display-text"
>
  DisplayText
</h1>
`;

exports[`renders the component h3 1`] = `
<h3
  className="DisplayText DisplayText--default"
  data-test-id="cf-ui-display-text"
>
  DisplayText
</h3>
`;

exports[`renders the component with an additional class name 1`] = `
<h1
  className="DisplayText my-extra-class DisplayText--default"
  data-test-id="cf-ui-display-text"
>
  DisplayText
</h1>
`;
